# MIM-OCR

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  pyproject.toml  setup.cfg
.github/workflows/: github-actions-demo.yml  prepare-base-image.yml  pytest.yml  run-flake8.yml
config/: params_weighted_leven.json  test_mim_ocr_conf.yaml
docs/: easy_ocr.md  ner_feature.md  requirements.md
ipython/: tesseract_example.ipynb  test_graph_lib.ipynb
mim_ocr/: __init__.py
mim_ocr/backends/: __init__.py  aws_textract.py  backend.py  google_vision.py  idrs.py  tesseract.py
mim_ocr/backends/IDRS_c_files/Common/: CSampleSetup.cpp  CSampleSetup.h  CSampleUtils.h
mim_ocr/backends/IDRS_c_files/Image2Json/: CApplicationOptions.h  CppImage2Json.cpp  Makefile
mim_ocr/data_model/: __init__.py  box.py  box_functions.py  idrs_box_model.py
mim_ocr/excepions/: __init__.py
mim_ocr/exceptions/: smooth_job_context.py
mim_ocr/graph/: builders.py  graph_model.py  graph_utils.py  visualization.py
mim_ocr/heuristics/: __init__.py  basic_features.py  extract_simple_results.py  feature.py  fuzzy_matching_keyword_feature.py  heuristic_analysis.py  keyword_feature.py  pol_roberta_ner_on_device.py  regex_feature.py
mim_ocr/image/: __init__.py  image.py  transformations.py
mim_ocr/optional_elements/easy_ocr/: __init__.py
mim_ocr/optional_elements/ner_feature/: NER_feature.py  __init__.py
mim_ocr/pipeline/: __init__.py  batch_processing.py  pipeline.py
mim_ocr/preprocessing/: __init__.py  deskew.py  reorient.py
mim_ocr/utils/: __init__.py  class_utils.py  notebook_utils.py  validators.py
mim_ocr/visualization/: __init__.py  visualize_result.py
sample_data/sample_data_tesseract_result/: badania.jpg.xlsx  canvas.png.xlsx  canvas_2.png.xlsx  jak_odczytac_wyniki_badan_moczu.png.xlsx  luxmed.png.xlsx  wyniki_badan_7_tydzien_enan_deca_forum_sfd.jpg.xlsx
scripts/: GCP_pipeline_test.py  iDRS_pipeline_test.py  ner_feature_test.py  run_tesseract_batch.py  tesseract_pipeline_test.py
stripped/ipython/: OCR_on_boxes_experiments_stripped.py  Tesseract_EasyOCR_compare_stripped.py  layout_parser_examples_stripped.py  tesseract_example_stripped.py  test_graph_lib.py
tests/: conftest.py
tests/backends/: test_AWS.py  test_GCP.py  test_tesseract.py
tests/data_model/: test_box.py  test_box_functions.py  test_idrs_box_model.py
tests/fixtures/: __init__.py  validators.py
tests/graph/: test_graph_basic.py
tests/heuristics/: test_features_occurrences_finding.py  test_features_priorities.py  test_fuzzy_matching_keyword_feature.py  test_heurisic_examine_box_lines.py
tests/image/: test_image.py
tests/input_data/: example_box_dataframe.csv  example_box_dataframe.xlsx  example_box_dataframe2.xlsx  example_box_dataframe_with_nonexistent_feature.xlsx  example_box_json.json  example_idrs_box.json  example_tesseract_dataframe.xlsx
tests/input_data/all_image_formats/: badania.jp2
tests/optional_elements/easy_ocr/: test_easy_ocr.py
tests/optional_elements/ner_feature/: test_feature_occurences_ner_feature.py
tests/pipeline/: test_pipeline.py
tests/preprocessing/: test_reorient.py
tests/utils/: test_class_utils.py
