[project]
name = "mim_ocr"
version = "0.0.1"
authors = [
  { name="Barbara Mroczek", email="barbara.mroczek@mim.ai" },
]
description = "Tool for using different OCR engines and process their results using common data structures."
readme = "README.md"
requires-python = ">=3.9, <=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    # from build/base_image/base_requirements.txt
    "matplotlib~=3.5.1",
    "numpy~=1.22.2",
    "opencv-python==4.5.4.60",
    "opencv-python-headless==4.5.4.60",  # It appears that the version of opencv-python and opencv-python headless should be the same
    "pandas~=1.4.0",
    "pdf2image",
    "Pillow==9.0.1",

    # from build/_requirements.txt
    "boto3",
    "deskew~=0.10.40",
    "google-cloud-storage",
    "google-cloud-vision",
    "hyperscan",
    "jsonpickle",
    "loguru",
    "omegaconf",
    "openpyxl",
    "pptree",
    "pytesseract~=0.3.8",
    "strsimpy",
    "symspellpy",
    "tqdm",
    "opencv-python",
    "pdf2image",
]

[tool.setuptools.packages.find]
where = ["mim_ocr"]


[project.urls]
"Homepage" = "https://github.com/mim-solutions/MIM-OCR"
"Bug Tracker" = "https://github.com/mim-solutions/MIM-OCR/issues"